[bug 1111809] limit whitespace style to <p/>s

--- a/kitsune/sumo/static/less/questions.less
+++ b/kitsune/sumo/static/less/questions.less
@@ -146,7 +146,9 @@ h2 {
     }
 
     .content {
-      white-space: pre-wrap;
+      > p {
+        white-space: pre-wrap;
+      }
     }
 
     .read-more {
